--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Enhanced Recipe Explorer</h1>
+    <h1 class="title">Recipe Explorer</h1>
     <div class="profile-container">
       <h2>Welcome, <span id="userName">Guest</span>!</h2>
     </div>
